# INFT2503

./: .gitignore  readme.md
1-grunnleggende/: .CMakeLists.txt  CMakeLists.txt  a.cpp  a.hpp  b.cpp  b.hpp  main.cpp
2-pekere-og-referanser/: 1.cpp  1a.cpp  1b.cpp  4.cpp  5.cpp  6.cpp  CMakeLists.txt  oppgave2-3.md
3-objektorientert/: 1.cpp  1.hpp  2.cpp  4.cpp  CMakeLists.txt  commodity.cpp  commodity.hpp
4-kontainere-autuo-lambda/: 1.cpp  2.cpp  CMakeLists.txt
surface-example/: CMakeLists.txt  surface.cpp  surface.hpp  surface_test.cpp
test-cmake/: CMakeLists.txt  answer.cpp  hello1.cpp  hello2.cpp  main.cpp
